# oci-apm-mcp-server

./: .env.example  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs.yml  tests.yml
docs/: ARCHITECTURE.md  CLIENT_SETUP.md  DEVELOPMENT_PLAN.md  GITHUB_WORKFLOW.md  IAM_SETUP.md  M2_LIVE_ACCEPTANCE.md  M3_LIVE_ACCEPTANCE.md  REFERENCE_REVIEW.md  SECURITY.md  TOOL_CATALOG.md  VM_DEPLOYMENT.md
src/oci_apm_mcp/: __init__.py  __main__.py  auth.py  client_factory.py  config.py  domain_service.py  errors.py  foundation.py  guardrails.py  investigation_service.py  models.py  sanitize.py  server.py  synthetic_service.py  trace_query_builder.py  trace_service.py  version.py
tests/: test_auth.py  test_client_factory.py  test_config.py  test_domain_service.py  test_errors.py  test_foundation.py  test_guardrails.py  test_investigation_service.py  test_server.py  test_synthetic_service.py  test_trace_query_builder.py  test_trace_service.py
