[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oci-apm-mcp-server"
version = "0.2.0"
description = "Read-only MCP server for OCI Application Performance Monitoring"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.27,<2",
  "oci>=2.181.1,<3",
  "pydantic>=2.7,<3",
]

[project.urls]
Homepage = "https://github.com/munyatam2001/oci-apm-mcp-server"
Repository = "https://github.com/munyatam2001/oci-apm-mcp-server"
Issues = "https://github.com/munyatam2001/oci-apm-mcp-server/issues"

[project.scripts]
oci-apm-mcp-server = "oci_apm_mcp.server:main"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
